--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "antd": "^5.10.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "ahooks": "^3.8.1",
+    "antd": "^5.10.3",
     "axios": "^1.3.2",
     "dayjs": "^1.11.9",
     "hoslink-xxx": "^1.1.1",
@@ -37,22 +38,22 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "*",
-    "vite": "^4.3.9",
-    "sass": "^1.63.2",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.5",
     "commitlint-config-cz": "^0.13.3",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "6.3.0",
-    "vite-plugin-require-transform": "^1.0.5",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "rollup-plugin-visualizer": "^5.9.0"
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.63.2",
+    "typescript": "*",
+    "vite": "^4.3.9",
+    "vite-plugin-require-transform": "^1.0.5"
   },
   "config": {
     "commitizen": {
