--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.3.2",
     "dayjs": "^1.11.9",
     "hoslink-xxx": "^1.1.1",
+    "i18next": "^24.0.2",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^15.1.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1"
