--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "antd": "^5.10.3",
     "axios": "^1.3.2",
     "dayjs": "^1.11.9",
-    "hoslink-xxx": "^1.1.1",
     "i18next": "^24.0.2",
+    "js-tools-xxx": "^1.0.2",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
