--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
-VITE_BASE_URL=http://192.168.110.15:85
+
+# 测试环境
+# VITE_BASE_URL=http://192.168.110.21:30500/
+VITE_BASE_URL=http://192.168.110.15:8500/
+
+# uaa
+VITE_BASE_URL_UAA=http://192.168.110.15:8589/
