--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-activation": "^0.12.4",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.6",
     "react-i18next": "^15.1.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.8.1",
