--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ package-lock.json
 .eslintrc-auto-import.json
 auto-import.d.ts
 
+/public/coldChainWeb
+/public/ColdChainScreen
 # misc
 .DS_Store
 .env.local
