--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-draggable": "^4.4.6",
     "react-i18next": "^15.1.2",
     "react-redux": "^8.0.7",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0"
