--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "wujie-react": "^1.0.24"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts}": [
